RESOLVED FIXED273953
[Remote Inspection] Redundant nearby targets should not be surfaced to Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=273953
Summary [Remote Inspection] Redundant nearby targets should not be surfaced to Web In...
Wenson Hsieh
Reported 2024-05-09 09:49:30 PDT
.
Attachments
Wenson Hsieh
Comment 1 2024-05-09 10:05:31 PDT
EWS
Comment 2 2024-05-09 13:09:21 PDT
Committed 278583@main (5e8cbc9e70f0): <https://commits.webkit.org/278583@main> Reviewed commits have been landed. Closing PR #28344 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.