[Remote Inspection] Redundant nearby targets should not be surfaced to Web Inspector https://bugs.webkit.org/show_bug.cgi?id=273953

Reviewed by Abrar Rahman Protyasha.

Currently, it's possible for the "nearby targets" heuristic to discover redundant elements, in the
case where a nearby target is a parent of another. In this case, it makes sense to only surface the
parent target. Fix this by implementing an algorithm to filter out such elements from the final list
of nearby targets, such that the final list does not contain any target that is a child of another
target.

Changes covered by augmenting the API test ElementTargeting.NearbyOutOfFlowElements.

* Source/WebCore/page/ElementTargetingController.cpp:
(WebCore::filterRedundantNearbyTargets):
(WebCore::ElementTargetingController::extractTargets):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/element-targeting-2.html:

Canonical link: https://commits.webkit.org/278583@main